--- a/index.html
+++ b/index.html
@@ -23,25 +23,6 @@
 	</head>
 	<body>
 		<header>
-			<!-- <div id="prueba-desple">
-				<div id="div-nav">
-					<div id="div-nav-a">
-						<a class="nav-a" id="ancor-ayu"
-							>AYUDA
-							<div id="desple">
-								<ul>
-									<li>OBJETOS PERDIDOS</li>
-									<li>CONTACTANOS</li>
-									<li>ATENCION AL VISITANTE</li>
-									<li>SERVICIOS DEL PARQUE</li>
-								</ul>
-							</div></a
-						>
-						<a class="nav-a" href="#">PROMOS</a>
-					</div>
-				</div>
-			</div> -->
-
 			<nav
 				class="navbar navbar-expand-lg z-1 position-sticky top-0 div-nav">
 				<div class="container-fluid">
@@ -107,24 +88,11 @@
 							<ul class="navbar-nav justify-content-center ps-5">
 								<li class="nav-item dropdown">
 									<a
-										class="nav-link nav-aconrds dropdown-toggle ps-4 pe-4 text-xl-center rounded-5 nav-link navbar-brand nav-a"
-										href="#"
-										role="button"
-										data-bs-toggle="dropdown"
-										aria-expanded="false">
-										PROMOCION
+										class="nav-link nav-aconrds ps-4 pe-4 text-xl-center rounded-5 nav-link navbar-brand nav-a"
+										href="./infor.html"
+										role="button">
+										INFORMACION
 									</a>
-									<ul
-										class="dropdown-menu dropdown-menu fondoNaranja fondo rounded-5">
-										<li>
-											<a
-												class="dropdown-item dropdown-nav text-black rounded-5"
-												href="#publicity"
-												>NO HAY PROMOCIONES
-												DISPONIBLES</a
-											>
-										</li>
-									</ul>
 								</li>
 							</ul>
 						</div>
@@ -137,7 +105,7 @@
 			<div id="div-img-principal">
 				<div class="div-principal-text">
 					<img
-						src="https://i.ibb.co/NtVwqhQ/Landing-page-capisaurios.png"
+						src="./imagenes/Landing_page_capisaurios.png"
 						alt="foto Jurassi Park" />
 				</div>
 			</div>
